# Frape

beam/: .gitignore  EC2_SETUP.md  README.md  finalize_wsl.sh  install.bat  install.sh  pyproject.toml  setup.py  test_beam.py  wsl_setup.sh
beam/beam/: __init__.py  cli.py  install_wsl.py
beam/beam/saas/: __init__.py  deploy.py  logs.py  monitor.py  saas_help.py  scale.py  status.py
