[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-cli"
version = "1.0.0"
description = "Beam - A SaaS-ready wrapper for Frappe Bench"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Beam Team", email = "team@beam.example.com"}
]
keywords = ["frappe", "bench", "saas", "deployment", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "frappe-bench>=5.0.0",
]

[project.scripts]
beam = "beam.cli:main"

[project.urls]
Homepage = "https://github.com/yourorg/beam"
Documentation = "https://github.com/yourorg/beam#readme"
Repository = "https://github.com/yourorg/beam"

